Update core for rails app

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -42,7 +42,7 @@
         "NAME":"الإسم",
         "EMAIL":"البريد الإلكتروني",
         "PATIENT":"المريض",
-        "AGE": "السن",
+        "DATE_OF_BIRTH": "تاريح الميلاد",
         "GENDER": "الجنس",
         "FEMALE": "أنثي",
         "MALE": "ذكر",
